--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,7 @@
 body {
     margin: auto;
     width: 100%;
-    background-color: #ffaaaa;
+    background-color: #aaf9ff;
     color: #333;
   }
   
@@ -45,7 +45,7 @@ body {
     font-family: 'IM Fell Great Primer SC', serif;
     /*background-image: url("../resources/family.jpg");*/
     background-position: center;
-    color: #2b411c;
+    color: #d6511c;
   }
   
   h2 {
@@ -53,7 +53,7 @@ body {
     margin-bottom: 20px;
     font-family: 'IM Fell Great Primer SC', serif;
     font-size: 36pt;
-    color: #2b411c;
+    color: #501604;
     text-align: center;
   }
   
@@ -183,4 +183,4 @@ body {
     font-family: Helvetica, Arial, sans-serif;
     color: #555;
   }
- 
+  C:\Users\student\Desktop\code102web\-2021\07-23-2021.md
