--- a/styles/style.css
+++ b/styles/style.css
@@ -142,7 +142,7 @@ body {
     margin-top: 15px;
     border-radius: 7px;
     padding: 10px;
-    background-color: #2b411c;
+    background-color: #442406;
     font-family: 'IM Fell Great Primer SC', serif;
     font-size: 16pt;
     color: #608c42;
@@ -183,4 +183,3 @@ body {
     font-family: Helvetica, Arial, sans-serif;
     color: #555;
   }
-  C:\Users\student\Desktop\code102web\-2021\07-23-2021.md
